--- a/ChallengeThreeUnitTest/ChallengeThreeUnitTest.csproj
+++ b/ChallengeThreeUnitTest/ChallengeThreeUnitTest.csproj
@@ -55,6 +55,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ChallengeThreeRepository\ChallengeThreeRepository.csproj">
+      <Project>{0499EBF8-A7F8-40CB-9CF7-0EDE46E48087}</Project>
+      <Name>ChallengeThreeRepository</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
